[tool.poetry]
name = "rspread"
version = "0.1.0"
description = "Calculate and optimize spreading resistance."
authors = ["Drayrs"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
